force-app/main/default/objects/JobImage__c/JobImage__c.object-meta.xml
<CustomObject>
    <label>Job Image</label>
    <nameField>
        <displayFormat>JI-{000000000}</displayFormat>
        <label>Job Images Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Images</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>