force-app/main/default/objects/JobImage__c/fields/AIImageURL__c.field-meta.xml
<CustomField>
    <fullName>AIImageURL__c</fullName>
    <formula>$Setup.SurveyPhotoViewerSetting__c.AIImageURL__c + ImageURL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AIImageURL</label>
    <type>Text</type>
</CustomField>