force-app/main/default/objects/JobImage__c/fields/AILabel__c.field-meta.xml
<CustomField>
    <fullName>AILabel__c</fullName>
    <formula>ProjectServiceQuestion__r.AILabel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AI Label</label>
    <type>Text</type>
</CustomField>