force-app/main/default/objects/JobImage__c/fields/AILabelName__c.field-meta.xml
<CustomField>
    <fullName>AILabelName__c</fullName>
    <formula>ProjectServiceQuestion__r.AILabel__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AI Label Name</label>
    <type>Text</type>
</CustomField>