force-app/main/default/objects/JobImage__c/fields/AIMatchedStates__c.field-meta.xml
<CustomField>
    <fullName>AIMatchedStates__c</fullName>
    <formula>IF(AILabel__c == null, &#39;Not Enabled&#39;,
IF(AILabelName__c == ClassifiedLabel__c, &#39;Matched&#39;, &#39;UnMatched&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AI Matched States</label>
    <type>Text</type>
</CustomField>