force-app/main/default/objects/JobImage__c/fields/ClassifiedLabel__c.field-meta.xml
<CustomField>
    <fullName>ClassifiedLabel__c</fullName>
    <label>Classified Label</label>
    <length>150</length>
    <type>Text</type>
</CustomField>