force-app/main/default/objects/JobImage__c/fields/ClassifiedResponse__c.field-meta.xml
<CustomField>
    <fullName>ClassifiedResponse__c</fullName>
    <label>Classified Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>