force-app/main/default/objects/JobImage__c/fields/CloudinaryImageUrl__c.field-meta.xml
<CustomField>
    <fullName>CloudinaryImageUrl__c</fullName>
    <formula>$Setup.SurveyPhotoViewerSetting__c.CloudinaryImageURL__c + ImageURL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CloudinaryImageUrl</label>
    <type>Text</type>
</CustomField>