force-app/main/default/objects/JobImage__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>