force-app/main/default/objects/JobImage__c/fields/ImageContentType__c.field-meta.xml
<CustomField>
    <fullName>ImageContentType__c</fullName>
    <label>Image Content Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>