force-app/main/default/objects/JobImage__c/fields/ImageDescription__c.field-meta.xml
<CustomField>
    <fullName>ImageDescription__c</fullName>
    <label>Image Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>