force-app/main/default/objects/JobImage__c/fields/ImageName__c.field-meta.xml
<CustomField>
    <fullName>ImageName__c</fullName>
    <label>Image Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>