force-app/main/default/objects/JobImage__c/fields/ImageThumbnailURL__c.field-meta.xml
<CustomField>
    <fullName>ImageThumbnailURL__c</fullName>
    <description>A thumbnail image URL</description>
    <label>ImageThumbnailURL</label>
    <type>Url</type>
</CustomField>