force-app/main/default/objects/JobImage__c/fields/ImageURL__c.field-meta.xml
<CustomField>
    <fullName>ImageURL__c</fullName>
    <label>ImageURL</label>
    <type>Url</type>
</CustomField>