force-app/main/default/objects/JobImage__c/fields/isClassified__c.field-meta.xml
<CustomField>
    <fullName>isClassified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Classified</label>
    <type>Checkbox</type>
</CustomField>