force-app/main/default/objects/JobImage__c/fields/IsDuplicated__c.field-meta.xml
<CustomField>
    <fullName>IsDuplicated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>There is already another similar photo in the table.</description>
    <inlineHelpText>This photo is duplicated.</inlineHelpText>
    <label>Is Duplicated</label>
    <type>Checkbox</type>
</CustomField>