force-app/main/default/objects/JobImage__c/fields/IsErrored__c.field-meta.xml
<CustomField>
    <fullName>IsErrored__c</fullName>
    <defaultValue>false</defaultValue>
    <description>an error flag to indicate that the photo can not be hashed</description>
    <label>Is Errored</label>
    <type>Checkbox</type>
</CustomField>