force-app/main/default/objects/JobImage__c/fields/IsFavorite__c.field-meta.xml
<CustomField>
    <fullName>IsFavorite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IsFavorite</description>
    <label>IsFavorite</label>
    <type>Checkbox</type>
</CustomField>