force-app/main/default/objects/JobImage__c/fields/IsUserFavorite__c.field-meta.xml
<CustomField>
    <fullName>IsUserFavorite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The external user favorite indicator</description>
    <inlineHelpText>The external user favorite indicator</inlineHelpText>
    <label>Is User Favorite</label>
    <type>Checkbox</type>
</CustomField>