force-app/main/default/objects/JobImage__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Job Images</relationshipLabel>
    <relationshipName>Job_Images</relationshipName>
    <type>Lookup</type>
</CustomField>