force-app/main/default/objects/JobImage__c/fields/JobAttempt__c.field-meta.xml
<CustomField>
    <fullName>JobAttempt__c</fullName>
    <label>Job Attempt</label>
    <referenceTo>JobAttempt__c</referenceTo>
    <relationshipLabel>Job Images</relationshipLabel>
    <relationshipName>Job_Images</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>