force-app/main/default/objects/JobImage__c/fields/JobDateReported__c.field-meta.xml
<CustomField>
    <fullName>JobDateReported__c</fullName>
    <label>Job Date Reported</label>
    <type>DateTime</type>
</CustomField>