force-app/main/default/objects/JobImage__c/fields/ParentLocation__c.field-meta.xml
<CustomField>
    <fullName>ParentLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Location</description>
    <label>ParentLocation</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>ParentLocation</relationshipLabel>
    <relationshipName>Job_Images</relationshipName>
    <type>Lookup</type>
</CustomField>