force-app/main/default/objects/JobImage__c/fields/PhotoHash__c.field-meta.xml
<CustomField>
    <fullName>PhotoHash__c</fullName>
    <description>PhotoHash</description>
    <label>PhotoHash</label>
    <length>40</length>
    <type>Text</type>
</CustomField>