force-app/main/default/objects/JobImage__c/fields/PoorQualityCheck__c.field-meta.xml
<CustomField>
    <fullName>PoorQualityCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PoorQualityCheck</description>
    <label>PoorQualityCheck</label>
    <type>Checkbox</type>
</CustomField>