force-app/main/default/objects/JobImage__c/fields/ProcessingPickupDateTime__c.field-meta.xml
<CustomField>
    <fullName>ProcessingPickupDateTime__c</fullName>
    <label>Processing Pickup Date Time</label>
    <type>DateTime</type>
</CustomField>