force-app/main/default/objects/JobImage__c/fields/ProjectServiceQuestion__c.field-meta.xml
<CustomField>
    <fullName>ProjectServiceQuestion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Service Question</label>
    <referenceTo>ProjectServiceQuestion__c</referenceTo>
    <relationshipLabel>Job Images</relationshipLabel>
    <relationshipName>Job_Images</relationshipName>
    <type>Lookup</type>
</CustomField>