force-app/main/default/objects/JobImage__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Job Images</relationshipLabel>
    <relationshipName>Job_Images</relationshipName>
    <type>Lookup</type>
</CustomField>