force-app/main/default/objects/JobImage__c/fields/ReadyForProcessing__c.field-meta.xml
<CustomField>
    <fullName>ReadyForProcessing__c</fullName>
    <formula>AND(
    ISBLANK(ImageURL__c), 
    OR(ISBLANK(ProcessingPickupDateTime__c),TRUE), NOT(ISBLANK(AttachmentId__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ready For Processing</label>
    <type>Checkbox</type>
</CustomField>