force-app/main/default/objects/JobImage__c/fields/ThumbnailURL__c.field-meta.xml
<CustomField>
    <fullName>ThumbnailURL__c</fullName>
    <formula>$Setup.SurveyPhotoViewerSetting__c.CloudinaryThumbnailURL__c  + ImageURL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ThumbnailURL</label>
    <type>Text</type>
</CustomField>